--- a/PersonalTrainer/src/MainProject/Modules/PersonalTrainerCore.WebGUI/Views/Shared/Layout.cshtml
+++ b/PersonalTrainer/src/MainProject/Modules/PersonalTrainerCore.WebGUI/Views/Shared/Layout.cshtml
@@ -64,13 +64,8 @@
             <environment names="Development">
                 <script src="~/lib/jquery/dist/jquery.js"></script>
                 <script src="~/lib/semantic/dist/semantic.js"></script>
-                <script src="http://semantic-ui.com/javascript/library/tablesort.js"></script>
-
-     
+                <script src="https://semantic-ui.com/javascript/library/tablesort.js"></script>
                 <script src="https://cdn.rawgit.com/mdehoog/Semantic-UI-Calendar/76959c6f7d33a527b49be76789e984a0a407350b/dist/calendar.min.js"></script>
-
-                <script src="~/js/site.js" asp-append-version="true"></script>
-
 
             </environment>
 
