--- a/PersonalTrainer/src/MainProject/Modules/PersonalTrainerDiet.WebGUI/Views/Diet/Day.cshtml
+++ b/PersonalTrainer/src/MainProject/Modules/PersonalTrainerDiet.WebGUI/Views/Diet/Day.cshtml
@@ -6,10 +6,9 @@
 }
 
 <style>
-
-   td.h2 {
-color: red;
-}
+        td.h2 {
+        color: red;
+    }
         pad-right {
         padding-right: 2em;
     }
@@ -216,23 +215,27 @@ color: red;
                 am: 'AM',
                 pm: 'PM'
             },
-            onChange: function (date, text) {
-                var ref = "/Diet/Day/"
-
-                var day = date.getDate();
-                var monthIndex;
-                var test = date.getMonth() + 1;
-                if (test < 10) {
-                    monthIndex = "0";
-                    monthIndex += test;
+            formatter: {
+                date: function (date, settings) {
+                    if (!date) return '';
+                    var day = date.getDate() + '';
+                    if (day.length < 2) {
+                        day = '0' + day;
+                    }
+                    var month = (date.getMonth() + 1) + '';
+                    if (month.length < 2) {
+                        month = '0' + month;
+                    }
+                    var year = date.getFullYear();
+                    return year + '/' + month + '/' + day;
                 }
-                else
-                    monthIndex = test;
-               
-
-                var year = date.getFullYear();
-
-                ref += day + "-" + monthIndex + "-" + year;
+            },
+            onChange: function (date, text) {
+                let ref = "/Diet/Day/"
+                const month = date.getUTCMonth() + 1;
+                const day = date.getUTCDate() + 1;
+                const year = date.getUTCFullYear();
+                ref += day + "/" + month + "/" + year;
                 window.location.href = ref;
             }
         });
