Przepisywanie na APi

--- a/PersonalTrainer/src/MainProject/Modules/PersonalTrainerDiet.WebGUI/Views/Shared/Components/LeftMenu/Default.cshtml
+++ b/PersonalTrainer/src/MainProject/Modules/PersonalTrainerDiet.WebGUI/Views/Shared/Components/LeftMenu/Default.cshtml
@@ -1,5 +1,4 @@
-﻿@model Framework.Models.Dto.UserDto
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 
 <div class="ui visible inverted left vertical sidebar menu" id="sidebar">
@@ -26,16 +25,3 @@
         </div>
     </div>
 </div>
-<!--
-    
-
-        <div class="item">
-            <div class="header"></div>
-            <div class="menu">
-                <a class="@(ViewContext.RouteData.Values["Action"].ToString() == "UserGoals" ? "active item" : "ui huge item")" asp-controller="Diet" asp-action="UserGoals">@Framework.Resources.ButtonLanguage.Goals</a>
-                <a class="@(ViewContext.RouteData.Values["Action"].ToString() == "Index" ? "active item" : "ui huge item")" asp-controller="Diet" asp-action="Index">@Framework.Resources.ButtonLanguage.Help</a>
-            </div>
-        </div>
-    </div>
-</div>
-    -->
