--- a/PersonalTrainer/src/MainProject/Modules/PersonalTrainerControlPanel.WebGUI/Views/Shared/Components/AdminPanelLeftMenu/Default.cshtml
+++ b/PersonalTrainer/src/MainProject/Modules/PersonalTrainerControlPanel.WebGUI/Views/Shared/Components/AdminPanelLeftMenu/Default.cshtml
@@ -1,6 +1,4 @@
-﻿@model Framework.Models.Dto.UserDto
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <div class="ui visible inverted left vertical sidebar menu" id="sidebar">
     <div class="item">
         <i class="settings icon"></i>@Framework.Resources.ButtonLanguage.Management
