--- a/PersonalTrainer/src/MainProject/Modules/PersonalTrainerDiet.WebGUI/Views/Diet/Day.cshtml
+++ b/PersonalTrainer/src/MainProject/Modules/PersonalTrainerDiet.WebGUI/Views/Diet/Day.cshtml
@@ -227,16 +227,17 @@
                         month = '0' + month;
                     }
                     var year = date.getFullYear();
-                    return year + '/' + month + '/' + day;
+                    return year + '-' + month + '-' + day;
                 }
             },
             onChange: function (date, text) {
-                let ref = "/Diet/Day/"
+                let ref = "/Diet/Day?id="
                 const month = date.getUTCMonth() + 1;
                 const day = date.getUTCDate() + 1;
                 const year = date.getUTCFullYear();
-                ref += day + "/" + month + "/" + year;
+                ref += date.toISOString();
                 window.location.href = ref;
+
             }
         });
 
