Poprawki do strony glownej i strony rejestracji

--- a/PersonalTrainer/src/MainProject/Modules/PersonalTrainerCore.WebGUI/Views/Home/Index.cshtml
+++ b/PersonalTrainer/src/MainProject/Modules/PersonalTrainerCore.WebGUI/Views/Home/Index.cshtml
@@ -3,14 +3,13 @@
     Layout = "Layout";
 }
 <body>
-    <h1 class="ui huge header">Projekt inzynierski</h1>
+    <h1 class="ui huge header">Projekt z przedmiotu "Technologie Aplikacji Internetowych"</h1>
     <div>
-        <div>Autor: <b>Roger Paul Skrzypczyk</b></div>
-        <div>Temat: <b>Serwis internetowy wspomagający planowanie diety </b></div>
+        <div>Autorzy: <b>Roger Skrzypczyk, </b> <b>Aleksander Chytkiewicz, </b> <b>Krzysztof Bywalski, </b> <b>Łukasz Zaroda, </b> <b>Łukasz Kijanka</b></div>
+        <div>Projekt: <b>Serwis internetowy wspomagający planowanie diety </b></div>
         <p></p>
         <div>Głównym celem projektu jest kalkulowanie kalorii i makroskladników spożywanych w ciągu danego dnia, a także zapamiętywanie ich.</div>
         <div>Strona oferuje korzystanie z gotowych lub własnoręcznie dodanych produktów, które są niezbędne do zaplanowania dnia żywieniowego.</div>
-
     </div>
 </body>
 
