--- a/PersonalTrainer/src/MainProject/Modules/PersonalTrainerCore.WebGUI/Views/Shared/Layout.cshtml
+++ b/PersonalTrainer/src/MainProject/Modules/PersonalTrainerCore.WebGUI/Views/Shared/Layout.cshtml
@@ -66,7 +66,6 @@
                 <script src="~/lib/semantic/dist/semantic.js"></script>
                 <script src="https://semantic-ui.com/javascript/library/tablesort.js"></script>
                 <script src="https://cdn.rawgit.com/mdehoog/Semantic-UI-Calendar/76959c6f7d33a527b49be76789e984a0a407350b/dist/calendar.min.js"></script>
-
             </environment>
 
             <environment names="Staging,Production">
@@ -77,7 +76,7 @@
 
 
                 <script src="https://cdn.rawgit.com/mdehoog/Semantic-UI-Calendar/76959c6f7d33a527b49be76789e984a0a407350b/dist/calendar.min.js"></script>
-
+                <script type="text/javascript" src="jquery.metadata.js"></script>
                 <script src="http://semantic-ui.com/javascript/library/tablesort.js"></script>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.js"
                         asp-fallback-src="~/lib/semantic/dist/js/semantic.min.js"
